# MedicalTrackerPro34

./: .replit  README.md  app.py  cli_ocr.py  index.html  pyproject.toml  replit.md
static/css/: custom.css  style.css
static/js/: main.js
templates/: index.html
